# tig-evolve

./: .gitignore  README.md  results.json  tig.py
algo-runner/: Cargo.toml
algo-runner/src/: challenge_info.md  lib.rs  main.rs
algo-runner/src/algorithm/: mod.rs
algo-runner/src/challenge/: mod.rs
algo-runner/src/challenge/baselines/: tabu_search.rs
deepevolve/: .gitignore  README.md  coder.py  database.py  deepevolve.py  problem.py  requirements-mini.txt  requirements.txt  researcher.py  run_example.sh
deepevolve/configs/: config.yaml  config_tig.yaml
deepevolve/data_cache/: amp_pd.py  circle_packing.py  codepde.py  molecular_translation.py  molecule.py  nuclei_image.py  openvaccine.py  polymer.py  usp_p2p.py
deepevolve/discoveries/burgers/: README.md  best_program_info.json  deepevolve_interface.py  main.py  solver.py
deepevolve/discoveries/circle_packing/: README.md  main.py
deepevolve/discoveries/molecular_translation/: README.md  best_program_info.json  deepevolve_interface.py  main.py
deepevolve/discoveries/molecule/: README.md  best_program_info.json  conv.py  dataset.py  deepevolve_interface.py  main_pyg.py  model.py  utils.py
deepevolve/discoveries/nuclei_image/: README.md  best_program_info.json  deepevolve_interface.py  main.py
deepevolve/discoveries/openvaccine/: README.md  best_program_info.json  deepevolve_interface.py  main.py
deepevolve/discoveries/polymer/: README.md  (+7 more)
deepevolve/utils/: code.py
examples/openevolve/: README.md  generate_config.sh  run.sh
examples/science-codeevolve/: README.md  generate_config.sh  run.sh
(+422 files in other folders)
