[package]
name = "algo-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.81"
base64 = "0.21"
bincode = "1.3"
clap = { version = "4.5.4" }
flate2 = "1.0"
paste = "1.0.15"
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = { version = "0.18.0" }
